Add short links management
